--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <div class="main-container">
-        <h1>Etch a Sketch!</h1>
-        <div class="board">
-            
-        </div>
+    <div class="flex-container">
+        <div class="title"><h1>SketchPad</h1></div>
+            <div class="content">
+                <div class="board">
+
+                </div>
+                <div class="buttons">
+                    <button>Black</button>
+                    <button>White</button>
+                    <button>Random</button>
+                    <button>Reset</button>
+                </div>
+            </div>
 
 
 
