added ability to toggle drawing with the 'D' key

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="buttons">
                     <button class ='black'>Black</button>
                     <button class="white">White</button>
+                    <input type="color" name="Draw color" id="draw">
                     <button>Random</button>
                     <button class="reset">Reset</button>
                 </div>
